smart_room/build/log/idf_py_stdout_output_4116
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\App\ESP32\smart_room\build\bootloader\esp-idf\esptool_py && D:\App\ESP32\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe D:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/App/ESP32/smart_room/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/7] Building C object esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj
FAILED: esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj 
ccache D:\App\ESP32\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/App/ESP32/smart_room/build/config -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gpio/include -ID:/App/ESP32/smart_room/user/mq2 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.1.3/components/driver/deprecated -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2c/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel-SMP/include/freertos -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/newlib/platform_include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include/freertos -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/xtensa/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/esp_additions/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/port/esp32/. -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/heap/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/log/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/soc/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/hal/platform_port/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/hal/esp32/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/hal/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_common/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/soc -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/include/private -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/esp32/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/deprecated_include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps/sntp -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/lwip/src/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/freertos/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/App/ESP32/smart_room=. -fmacro-prefix-map=D:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj -MF esp-idf\mq2\CMakeFiles\__idf_mq2.dir\mq2.c.obj.d -o esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj -c D:/App/ESP32/smart_room/user/mq2/mq2.c
In file included from D:/App/ESP32/smart_room/user/mq2/mq2.c:2:
D:/App/ESP32/Espressif/frameworks/esp-idf-v5.1.3/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
D:/App/ESP32/smart_room/user/mq2/mq2.c: In function 'read_mq2':
D:/App/ESP32/smart_room/user/mq2/mq2.c:21:16: error: too many arguments to function 'adc1_get_raw'
   21 |         ret1 = adc1_get_raw( ADC1_CHANNEL_0, &adc1_value[count]);
      |                ^~~~~~~~~~~~
D:/App/ESP32/Espressif/frameworks/esp-idf-v5.1.3/components/driver/deprecated/driver/adc.h:124:5: note: declared here
  124 | int adc1_get_raw(adc1_channel_t channel);
      |     ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
